--- a/Java Files/src/application/application.css
+++ b/Java Files/src/application/application.css
@@ -1,1 +1,4 @@
-/* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
+/* JavaFX CSS --- use -fx-Property
+ *
+ *  Make it look pretty
+ */
