--- a/Screen_1.fxml
+++ b/Screen_1.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.text.Font?>
 
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="442.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <Label prefHeight="73.0" prefWidth="244.0" text="Please submit your written image" BorderPane.alignment="CENTER">
@@ -31,7 +30,7 @@
                   <Insets left="40.0" top="100.0" />
                </FlowPane.margin>
             </Label>
-            <Button mnemonicParsing="false" text="Save File">
+            <Button fx:id="save_btn" mnemonicParsing="false" onAction="#saveFile" text="Save File">
                <FlowPane.margin>
                   <Insets left="300.0" top="100.0" />
                </FlowPane.margin>
